k8s/components/apps/home-automation/esphome/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: esphome
spec:
  type: NodePort
  selector:
    app: esphome
  ports:
    - protocol: TCP
      port: 6052
      targetPort: 6052
      nodePort: 30052
